# qa-ta-ai-workbench

./: .gitignore  CONCEPT.md  LICENSE  README.md  qataki.sh  requirements.txt
backend/qataki/: __init__.py  config.py  main.py  settings_store.py
backend/qataki/agent/: loop.py  registry.py
backend/qataki/agent/prompts/: system.md
backend/qataki/agent/skills/explore-webapp/: SKILL.md
backend/qataki/agent/skills/plan-task/: SKILL.md
backend/qataki/agent/skills/write-feature/: SKILL.md
backend/qataki/cost/: cost_analytics.py  cost_guard.py  pricing.py  pricing_agent.py  pricing_store.py
backend/tests/: test_agent.py
bench/: README.md
done/qataki-0.1.0/: .env.example  README.md  qataki-server.sh  requirements.txt
done/qataki-0.1.0/backend/qataki/: __init__.py  context_audit.py  killswitch.py  llm.py  main.py  mcp_client.py  paths.py  projects.py  usagelog.py
done/qataki-0.1.0/backend/qataki/agent/: session.py
done/qataki-0.1.0/backend/qataki/applog/: __init__.py  broadcast.py  reader.py
done/qataki-0.1.0/backend/qataki/cost/: __init__.py
done/qataki-0.1.0/backend/tests/: test_agent.py
done/qataki-0.1.0/docs/: ZIELE_ARCHITEKTUR.md
done/qataki-0.1.0/frontend/: index.html
done/qataki-0.1.0/frontend/css/: app.css
done/qataki-0.1.0/frontend/js/: app.js
done/qataki-0.2.0/: CHANGES.md  README.md  config.toml
done/qataki-0.2.0/backend/qataki/: __init__.py  cancellation.py  config.py  killswitch.py  main.py  mcp_client.py  projects.py  settings_store.py
done/qataki-0.2.0/backend/qataki/agent/: __init__.py  registries.py  session.py
done/qataki-0.2.0/backend/qataki/applog/: setup.py
done/qataki-0.2.0/backend/qataki/cost/: pricing_agent.py
done/qataki-0.2.0/frontend/: index.html
done/qataki-0.2.0/frontend/css/: app.css
done/qataki-0.2.0/frontend/js/: app.js
frontend/: index.html
frontend/css/: app.css
frontend/js/: app.js
shelf/agent-core/: README.md  pyproject.toml
shelf/agent-core/src/uc_agent_core/: __init__.py  hooks.py  loop.py  prompts.py  registry.py  skills.py  validators.py
shelf/agent-core/src/uc_agent_core/prompts/: system.md
shelf/agent-core/src/uc_agent_core/skills/explore-webapp/: SKILL.md
shelf/agent-core/tests/: test_agent_core.py
shelf/credentials/: README.md  credentials.example.yaml  pyproject.toml
shelf/credentials/src/uc_credentials/: __init__.py  store.py
shelf/credentials/tests/: test_credentials.py
shelf/llm-cost/: README.md  pyproject.toml
shelf/llm-cost/src/uc_llm_cost/: __init__.py  _paths.py  cost_analytics.py  cost_guard.py  pricing.py  pricing_store.py
shelf/llm-cost/tests/: test_cost.py
shelf/llm-provider/: README.md  pyproject.toml
shelf/llm-provider/src/uc_llm_provider/: __init__.py  factory.py
shelf/llm-provider/src/uc_llm_provider/cli/: main.py
shelf/llm-provider/src/uc_llm_provider/cli/commands/: __init__.py  chat.py  config.py  health.py  models.py  stream.py  tokens.py
shelf/llm-provider/src/uc_llm_provider/core/: base.py  models.py  retry.py
shelf/llm-provider/src/uc_llm_provider/logging/: __init__.py  base.py  cost_logger.py  request_logger.py
shelf/llm-provider/src/uc_llm_provider/providers/: __init__.py  _openai_tier2.py  _openai_tier3.py  _openai_tools.py  anthropic.py  google.py  ollama.py  openai.py  openai_compatible.py  template.py
shelf/llm-provider/src/uc_llm_provider/server/: __init__.py  app.py  config.py  main.py  registry.py
shelf/llm-provider/src/uc_llm_provider/server/routes/: __init__.py  chat.py  health.py  models.py  provider.py  tokens.py
shelf/llm-provider/tests/: conftest.py  test_cli.py  test_cost_logger.py  test_factory.py  test_models.py  test_providers.py  test_retry.py  test_server.py
shelf/playwright-driver/: README.md  pyproject.toml
shelf/playwright-driver/src/uc_playwright_driver/: __init__.py  client.py
shelf/playwright-driver/src/uc_playwright_driver/tools/: __init__.py  assertions.py  auth.py  browser.py  content.py  frames.py  interaction.py  locators.py  navigation.py  network.py  script.py  storage.py  tabs.py
shelf/playwright-driver/tests/: conftest.py  test_client.py  test_content.py  test_locators.py  test_navigation.py
