[project]
name = "uc-agent-core"
version = "0.1.0"
description = "A generic, tool-driven agentic loop with cost limits, cancellation and step-level streaming. Host-injected dependencies, no app coupling."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "uc-it" }]
keywords = ["agent", "llm", "tools", "loop", "qa", "test-automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
# Sibling shelf blocks (uc-llm-provider, uc-llm-cost, uc-playwright-driver) are
# provided by the host's environment, not resolved from PyPI.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uc_agent_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
