[project]
name = "uc-credentials"
version = "0.1.0"
description = "Reusable, light credential store: named login profiles from a project YAML, secrets as redacting SecretStr, env override for CI/scripts. Referenced by handle so callers never pass values around."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "uc-it" }]
keywords = ["credentials", "secrets", "yaml", "login", "basic-auth", "vault"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = ["pydantic>=2", "pyyaml>=6"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uc_credentials"]

[tool.pytest.ini_options]
testpaths = ["tests"]
