[project]
name = "uc-llm-cost"
version = "0.1.0"
description = "LLM cost guard, pricing table, and usage analytics. Generic and host-injectable, no application coupling. Pure standard library."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "uc-it" }]
keywords = ["llm", "cost", "budget", "pricing", "tokens", "guardrail"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uc_llm_cost"]

[tool.pytest.ini_options]
testpaths = ["tests"]
