[project]
name = "uc-llm-provider"
version = "0.5.1"
description = "Generic LLM provider abstraction (Anthropic, OpenAI, Google, Ollama, OpenAI-compatible). HTTP-based via httpx, no vendor SDKs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "uc-it" }]
keywords = ["llm", "anthropic", "openai", "ollama", "ai", "provider", "abstraction", "local-llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.26.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
server = ["fastapi>=0.100.0", "uvicorn[standard]>=0.20.0"]
cli    = ["click>=8.0.0", "rich>=13.0.0"]
dev    = ["pytest>=7.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uc_llm_provider"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
